--- a/Index.html
+++ b/Index.html
@@ -34,6 +34,7 @@
     <h2>Invest with Confidence</h2>
     <p>Partner with us to build a future in Nigeria's real estate sector. Minimum investment: ₦10 Million.</p>
   </section>
+
+  <script type="module" src="/src/main.js"></script>
 </body>
 </html>
-
