--- a/index.html
+++ b/index.html
@@ -35,6 +35,16 @@
     <p>Partner with us to build a future in Nigeria's real estate sector. Minimum investment: ₦10 Million.</p>
   </section>
 
+  <section style="background:#fff; padding: 30px 20px; text-align: center;">
+  <h2>About Crowsfiddled Company Ltd</h2>
+  <p style="max-width: 700px; margin: auto; line-height: 1.6;">
+    Established in 2015, Crowsfiddled Company Ltd is a registered Nigerian private limited company, 
+    specializing in civil engineering, construction contracts, and real estate management.<br><br>
+    With presence in Jos, Enugu, Anambra, Asaba, Owerri, and Abia State, we are committed to delivering 
+    strong, reliable solutions that meet the highest standards of quality and trust.
+  </p>
+  </section>
+
   <script type="module" src="/src/main.js"></script>
 </body>
 </html>
