--- a/index.html
+++ b/index.html
@@ -44,7 +44,32 @@
     strong, reliable solutions that meet the highest standards of quality and trust.
   </p>
   </section>
+<section style="background: #f4f4f4; padding: 30px 20px; text-align: center;">
+  <h2>Our Services</h2>
+  <div style="max-width: 900px; margin: auto; display: flex; flex-wrap: wrap; justify-content: center; gap: 20px;">
 
+    <div style="background: white; padding: 20px; border-radius: 10px; width: 250px; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
+      <h3>Civil Engineering</h3>
+      <p>From soil testing to structural design, we deliver precise, high-quality engineering services.</p>
+    </div>
+
+    <div style="background: white; padding: 20px; border-radius: 10px; width: 250px; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
+      <h3>Building Construction</h3>
+      <p>We manage and execute reliable construction projects across Nigeria.</p>
+    </div>
+
+    <div style="background: white; padding: 20px; border-radius: 10px; width: 250px; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
+      <h3>Real Estate Management</h3>
+      <p>Offering property development, marketing, and investment services tailored for growth.</p>
+    </div>
+
+    <div style="background: white; padding: 20px; border-radius: 10px; width: 250px; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
+      <h3>General Contracts & Supplies</h3>
+      <p>We also handle procurement and delivery of materials for large-scale projects.</p>
+    </div>
+
+  </div>
+</section>
   <script type="module" src="/src/main.js"></script>
 </body>
 </html>
